<resources>
    <string name="app_name">Inmobiliaria2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_sesion">Cerrar Sesión</string>
</resources>
