<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_propiedades"
            android:icon="@drawable/icons8_house"
            android:title="@string/menu_propiedades" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/icons8_profile"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/icons8_money"
            android:title="@string/menu_pagos" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/icons8_paper"
            android:title="@string/menu_contratos" />
    </group>

    <item android:title="Salida">
        <menu>
            <item
                android:id="@+id/nav_sesion"
                android:icon="@drawable/icons8_close"
                android:title="@string/menu_sesion" />
        </menu>
    </item>

</menu>
